k8s/blog/service.yml
apiVersion: v1
kind: Service
metadata:
  name: ghost
  namespace: blog
  labels:
    app: ghost
spec:
  type: ClusterIP
  selector:
    app: ghost
  ports:
    - port: 2368
      targetPort: 2368
      protocol: TCP
